jsp파일 한글 수정

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,7 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/views/admin_includes/footer.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/admin_includes/navigation.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/admins/admin_home.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/branch_includes/footer.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/branch_includes/navigation.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
